feat(计费): 增加能量时间线增量计费与规则缓存优化